achieve enlightenment re: mobile scrolling issue
It's because I put hammerjs to listen for swipe events on
touch events - for example, scrolling! - on the element it's
being used on, which makes sense even though it's been the cause
of so much sadness visited upon the world.

Now I need to find a way to get hammerjs to play nicely with scrolling...
inertia scrolling without too much of a processing cost would be
great, but maybe I don't need to leverage an honestToGod js library
for that. This is good tho! I understand the issue! Mobile responsiveness
will not defeat me this day

--- a/client/app/styles/main.scss
+++ b/client/app/styles/main.scss
@@ -88,7 +88,7 @@ body{
 }
 
 
-.center-container{
+#center-container{
 	width: 100%;
 	height: 100%;
 	display: flex;
@@ -274,6 +274,10 @@ body{
 	//margin-top: 1em;
 	//height: auto !important;
 }
+.about-box-heading{
+	flex: 1 0 auto;
+	display: block;
+}
 
 .about-text-bubble{
 	flex: 1 0 auto;
@@ -283,14 +287,15 @@ body{
 }
 
 .about-skills-heading{
-	flex: inherit;
+	flex: 1 0 auto;
+	display: block;
 	font-size: 140%;
 }
 .about-skills-bubble{
 	width: 90%;
 
 	// child flex properties
-	flex: inherit;
+	flex: 1 0 auto;
 
 	// parent flex properties
 	display: flex;
@@ -648,6 +653,9 @@ body{
 	#about-box{
 		left:-100%;
 		width: 100%;
+
+		overflow-y: scroll;
+		-webkit-overflow-scrolling:touch;
 
 		// >767px: justify-content: center;
 		justify-content: flex-start;
